Estiliza snippets de code post page blog

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
         "Autocuidado",
         "frontmatter",
         "github",
-        "luisdan"
+        "luisdan",
+        "rehype"
     ],
     "workbench.colorCustomizations": {
         "activityBar.activeBackground": "#f9ac68",
