--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "gray-matter": "^4.0.3",
+    "mdx-prism": "^0.3.4",
     "next": "13.1.1",
     "next-mdx-remote": "^4.2.0",
     "react": "18.2.0",
