--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint-fix": "next lint --fix"
   },
   "dependencies": {
     "@next/font": "13.1.1",
     "eslint": "8.30.0",
-    "eslint-config-next": "13.1.1",
+    "eslint-config-next": "^13.1.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "gray-matter": "^4.0.3",
     "mdx-prism": "^0.3.4",
     "next": "13.1.1",
     "next-mdx-remote": "^4.2.0",
+    "prettier": "^2.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
