--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mdx-prism": "^0.3.4",
     "next": "13.1.1",
     "next-mdx-remote": "^4.2.0",
+    "next-themes": "^0.2.1",
     "prettier": "^2.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
