--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@vercel/analytics": "^0.1.8",
     "eslint": "8.30.0",
     "eslint-config-next": "^13.1.1",
     "eslint-config-prettier": "^8.5.0",
