refactor: :recycle: Agrega tags planificación y autocuidado
Sube borrador de artículos provenientes de infografías

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "github",
         "luisdan",
         "rehype",
+        "selfcare",
         "unoptimized"
     ],
     "workbench.colorCustomizations": {
