refactor: :zap: Configura next-sitemap para generar robots.txt y sitemap.xml
Cambia directorio de build a por default .next

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "frontmatter",
         "github",
         "luisdan",
+        "postbuild",
         "rehype",
         "selfcare",
         "unoptimized"
