--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "lint-fix": "next lint --fix"
@@ -21,6 +22,7 @@
     "mdx-prism": "^0.3.4",
     "next": "13.1.1",
     "next-mdx-remote": "^4.2.0",
+    "next-sitemap": "^3.1.52",
     "next-themes": "^0.2.1",
     "prettier": "^2.8.1",
     "react": "18.2.0",
