refactor: :recycle: Mejora párrafo resumen de los temas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,13 @@
 {
     "cSpell.words": [
+        "asincrónica",
+        "autocuidado",
         "Autocuidado",
         "frontmatter",
         "github",
         "luisdan",
         "postbuild",
+        "procrastinación",
         "rehype",
         "selfcare",
         "unoptimized"
