feat: :sparkles: Publica artículo 7 Beneficios de Caminar, tiene la feature de autor externo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "frontmatter",
         "github",
         "luisdan",
+        "Pedrique",
         "postbuild",
         "procrastinación",
         "Propóngase",
