feat: :sparkles: Implementa feature section projects

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,10 +3,14 @@
         "asincrónica",
         "autocuidado",
         "Autocuidado",
+        "Cevallos",
+        "Farmatodo",
         "frontmatter",
         "github",
+        "Jhon",
         "luisdan",
         "Pedrique",
+        "Pereira",
         "postbuild",
         "procrastinación",
         "Propóngase",
