feat: :sparkles: Publica artículo de Análisis de ventas con SQL

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,11 +4,14 @@
         "autocuidado",
         "Autocuidado",
         "Cevallos",
+        "codigo",
         "Farmatodo",
         "frontmatter",
         "github",
         "Jhon",
+        "logrémoslo",
         "luisdan",
+        "Marcela",
         "Pedrique",
         "Pereira",
         "postbuild",
